# S3_Data_Processing

./: CMakeLists.txt  DatabaseCreate.sql  DatabaseUtils.sql  vcpkg.json
src/: CMakeLists.txt
src/app_1_gaia_csv_downloader/: CMakeLists.txt  main.cpp
src/app_2_gaia_import_csv/: CMakeLists.txt  ExportProgressManager.cpp  ExportProgressManager.h  ExportToSql.cpp  ExportToSql.h  GaiaRowProcessor.cpp  GaiaRowProcessor.h  main.cpp
src/app_3_simbad_import_db/: CMakeLists.txt  DbQuery.cpp  DbQuery.h  ExportToSql.cpp  ExportToSql.h  SimbadRowProcessor.cpp  SimbadRowProcessor.h  main.cpp
src/app_4_export_data_fixer/: CMakeLists.txt  ExportDataFixerDb.cpp  ExportDataFixerDb.h  GreekLatinConverter.cpp  GreekLatinConverter.h  main.cpp
src/app_5_export_s3_sectors/: CMakeLists.txt  CelestialObject.h  DbReader.cpp  DbReader.h  ExportToSql.cpp  ExportToSql.h  Sector.h  main.cpp
src/thxsoft_astronomy/: AstronomyConstants.h  AstronomyConverter.h  BolometricCalculator.cpp  BolometricCalculator.h  CMakeLists.txt  CartesianCoordinate.h  GalacticCoordinate.cpp  GalacticCoordinate.h  LuminanceCalculator.cpp  LuminanceCalculator.h  RadiusCalculator.cpp  RadiusCalculator.h  SimbadObjectType.h  SpectralClassifier.cpp  SpectralClassifier.h  TeffCalculator.cpp  TeffCalculator.h
src/thxsoft_common/: CMakeLists.txt  ConcurrentJob.h  CsvParser.cpp  CsvParser.h  Exception.cpp  Exception.h  LoggingSetup.cpp  LoggingSetup.h  Thx.cpp  Thx.h  UnitConverter.h
src/thxsoft_compression/: CMakeLists.txt  Compression.cpp  Compression.h
src/thxsoft_database/: CMakeLists.txt  DatabaseUtils.cpp  DatabaseUtils.h
src/thxsoft_database_postgres/: CMakeLists.txt  PostgresBatchUpdate.cpp  PostgresBatchUpdate.h
src/thxsoft_database_sqlite/: CMakeLists.txt  SqliteBatchUpdate.cpp  SqliteBatchUpdate.h
src/thxsoft_database_sqlite/msqlite/: bind.hpp  concepts.hpp  empty_or_error.hpp  exec.hpp  first.hpp  for_each.hpp  onerror.hpp  open.hpp  prepare.hpp  reset.hpp  result.hpp  step.hpp
src/thxsoft_database_sqlite/msqlite/cache/: db.hpp
src/thxsoft_database_sqlite/msqlite/detail/: bind.hpp  call.hpp  empty_or_error.hpp  exec.hpp  for_each.hpp  fwd_exp_exec.hpp  onerror.hpp  open.hpp  prepare.hpp  prepare_impl.hpp  reset.hpp  step.hpp
src/thxsoft_database_sqlite/msqlite/pipes/: context.hpp
src/thxsoft_database_sqlite/msqlite/pipes/detail/: bind.hpp  exec.hpp  first.hpp  for_each.hpp  prepare.hpp  reset.hpp  step.hpp
src/thxsoft_database_sqlite/msqlite/throws/: error.hpp  exec.hpp  for_each.hpp  open.hpp  prepare.hpp  step.hpp
src/thxsoft_web/: CMakeLists.txt  ThxWeb.cpp  ThxWeb.h
